--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,10 @@
 }
 body {
     font-family: 'Poppins', sans-serif;
-    /* background: #1d2026; */
-    /* color: white; */
-    /* background: lightblue; */
+    background: #1d2026;
+    color: white;
 }
 /* Navigation Bar */
-.header {
-    min-height: 100vh;
-    width: 100%;
-    background-image: url('main-logo.png'), linear-gradient(rgba(4,9,30,0.7));
-    background-position: center;
-    background-size: cover;
-    position: relative;
-}
 nav {
     display: flex;
     background-color: black;
@@ -48,9 +39,16 @@ nav ul li a:hover {
     color: rgb(106, 255, 135);
 }
 /* Index Main Text */
+.header {
+    min-height: 100vh;
+    width: 100%;
+    background-image: url('../resources/home-image.png');
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
 .index-main-text-container {
     max-width: 600px;
-    margin-top: 7%;
     margin-left: 50%;
 }
 .index-main-text-container h1 {
@@ -58,6 +56,7 @@ nav ul li a:hover {
     font-weight: bold;
     font-family: 'Poppins', sans-serif;
     line-height: 75px;
+    padding-top: 25%;
 }
 .index-main-text-container p {
     margin-top: 30px;
@@ -78,9 +77,47 @@ nav ul li a:hover {
     width: 300px;
     margin-top: 7%;
 }
+.course {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+.course h1 {
+    font-size: 36px;
+    font-weight: 600;
+}
+.course p {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+}
+.course-row {
+    margin-top: 5px;
+    display: flex;
+    justify-content: space-between;
+}
+.course-col {
+    flex-basis: 31%;
+    background: white;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    color: black;
+    transition: 0.5s;
+}
+.course-col h3 {
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+.course-col:hover {
+    box-shadow: 0 0 20px 0px rgba(106, 255, 135, 0.5);
+}
 /* Profile */
 /* Main Text */
-
 .introduction h2 {
     margin-top: 100px;
     text-align: center;
