--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Poppins', sans-serif;
     background: #1d2026;
     color: white;
+    overflow-x: hidden;
 }
 footer {
     position: absolute;
@@ -86,10 +87,6 @@ nav {
 nav .main-logo img{
     width: 250px;
 }
-nav .main-logo img:hover{
-    width: 250px;
-    pointer-events: stroke;
-}
 nav ul {
     display: flex;
     list-style: none;
@@ -104,6 +101,77 @@ nav ul li a {
 }
 nav ul li a:hover {
     color: rgb(106, 255, 135);
+}
+.menu-toggle {
+    display: none;
+    flex-direction: column;
+    height: 20px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+    position: relative;
+}
+.menu-toggle input {
+    position: absolute;
+    width: 40px;
+    height: 28px;
+    left: -5px;
+    top: -3px;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 2;
+}
+.menu-toggle span {
+    display: block;
+    width: 28px;
+    height: 3px;
+    background-color: white;
+    border-radius: 3px;
+    transition: all 0.5s;
+}
+.menu-toggle span:nth-child(2) {
+    transform-origin: 0 0;
+}
+.menu-toggle span:nth-child(4) {
+    transform-origin: 0 100%;
+}
+.menu-toggle input:checked ~ span:nth-child(2) {
+    transform: rotate(45deg) translate(-1px, -1px);
+}
+.menu-toggle input:checked ~ span:nth-child(3) {
+    transform: scale(0)
+}
+.menu-toggle input:checked ~ span:nth-child(4) {
+    transform: rotate(-45deg) translate(-1px, 0px);
+}
+@media screen and (max-width: 768px){
+    nav ul {
+        width: 50%;
+    }
+}
+@media screen and (max-width: 576px) {
+    .menu-toggle {
+        display: flex;
+    }
+    nav ul {
+        position: absolute;
+        right: 0;
+        top: 0;
+        height: 100vh;
+        flex-direction: column;
+        align-items: center;
+        background-color: black;
+        justify-content: space-evenly;
+        /* z-index: 20; */
+        width: 80%;
+        transform: translateX(100%);
+        transition: all 1s;
+        opacity: 1;
+    }
+    nav ul.slide {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
 /* Index Main Text */
 .index-header {
