--- a/css/style.css
+++ b/css/style.css
@@ -519,6 +519,10 @@ footer {
     }
 }
 /* Dashboard */
+.dashboard-page {
+  background-image: url(../resources/study-pattern.png);
+  margin-top: 0%;
+}
 .study-status {
   margin-bottom: 3rem;
 }
