--- a/css/style.css
+++ b/css/style.css
@@ -541,9 +541,39 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  width: 50%;
+  width: 30%;
   color: black;
   margin: auto;
+}
+@media screen and (max-width: 786px) {
+  .study-cards {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+  .study-cards-progress {
+    background: rgb(106, 255, 135);
+    width: 10px;
+    height: 30px;
+    border-radius: 1rem;
+    position: relative;
+    overflow: hidden;
+    margin-top: 15px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .study-cards {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+  .study-cards-progress {
+    background: rgb(106, 255, 135);
+    width: 10px;
+    height: 30px;
+    border-radius: 1rem;
+    position: relative;
+    overflow: hidden;
+    margin-top: 15px;
+  }
 }
 .study-cards-item {
   display: flex;
@@ -553,15 +583,16 @@ footer {
   padding: 2rem;
   box-shadow: 6px 6px 10px rgba(0, 0, 0, 0.295);
   justify-content: space-between;
-  height: 200px;
+  height: 100%;
 }
 .study-cards-progress {
   background: rgb(106, 255, 135);
-  width: 500px;
-  height: 25%;
+  width: 300px;
+  height: 30px;
   border-radius: 1rem;
-  position:relative;
+  position: relative;
   overflow: hidden;
+  margin-top: 15px;
 }
 .study-cards-progress::after {
   content: '';
