--- a/css/style.css
+++ b/css/style.css
@@ -517,10 +517,10 @@ footer {
     }
 }
 /* Dashboard */
-.dashboard-page {
+/* .dashboard-page {
   background-image: url(../resources/study-pattern.png);
   margin-top: 0%;;
-}
+} */
 .study-status {
   margin-bottom: 3rem;
 }
@@ -544,11 +544,11 @@ footer {
   margin: auto;
 }
 @media screen and (max-width: 786px) {
-  .dashboard-page {
+  /* .dashboard-page {
     background-image: url(../resources/study-pattern.png);
     margin-top: 0%;;
     width: 100vh;
-  }
+  } */
   .study-cards {
     width: 50%;
     margin-bottom: 30px;
@@ -579,11 +579,11 @@ footer {
   }
 }
 @media screen and (max-width: 576px) {
-  .dashboard-page {
+  /* .dashboard-page {
     background-image: url(../resources/study-pattern.png);
     margin-top: 0%;;
     width: fit-content;
-  }
+  } */
   .study-cards {
     width: 50%;
     margin-bottom: 30px;
