--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  width: auto;
 }
 body {
   font-family: 'Poppins', sans-serif;
   background: #1d2026;
   color: white;
   overflow-x: hidden;
-  width: auto;
+  width: 100vh;
 }
 /* Navigation Bar */
 nav {
@@ -579,11 +578,11 @@ footer {
   }
 }
 @media screen and (max-width: 576px) {
-  /* .dashboard-page {
+  .dashboard-page {
     background-image: url(../resources/study-pattern.png);
     margin-top: 0%;;
     width: fit-content;
-  } */
+  }
   .study-cards {
     width: 50%;
     margin-bottom: 30px;
