--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   background: #1d2026;
   color: white;
   overflow-x: hidden;
-  width: 100vh;
+  width: 100vw;
 }
 /* Navigation Bar */
 nav {
