--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,9 @@ nav ul li a:hover {
   }
 }
 @media screen and (max-width: 576px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
   .menu-toggle {
     display: flex;
   }
