--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ nav ul li a:hover {
 }
 @media screen and (max-width: 576px) {
   ::-webkit-scrollbar {
-    display: none;
+    overflow-x: hidden;
   }
   .menu-toggle {
     display: flex;
