--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,7 @@ body {
   font-family: 'Poppins', sans-serif;
   background: #1d2026;
   color: white;
-  overflow-x: hidden;
-  width: 100vw;
+  overflow-x: hidden;;
 }
 /* Navigation Bar */
 nav {
