--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ nav ul li a:hover {
   }
 }
 @media screen and (max-width: 576px) {
-  ::-webkit-scrollbar {
-    overflow-x: hidden;
+  nav {
+    width: 100vw;
   }
   .menu-toggle {
     display: flex;
