--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ nav ul li a:hover {
   }
 }
 @media screen and (max-width: 576px) {
-  body {
-    width: fit-content;
+  nav {
+    max-width: 576px;
   }
   .menu-toggle {
     display: flex;
