--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ nav ul li a:hover {
   }
 }
 @media screen and (max-width: 576px) {
-  nav {
-    max-width: 576px;
+  body {
+    overflow-x: hidden;
   }
   .menu-toggle {
     display: flex;
