--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,12 @@ nav ul li a:hover {
   opacity: 0;
   transform: scale(0);
 }
-@media screen and (max-width: 768px){
+/* @media screen and (max-width: 768px){
   nav ul {
       width: 50%;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 576px) {
   body {
     overflow-x: hidden;
   }
@@ -109,7 +109,7 @@ nav ul li a:hover {
     opacity: 1;
     transform: translateX(0);
   }
-}
+} */
 footer {
   position: absolute;
   background: black;
