--- a/css/style.css
+++ b/css/style.css
@@ -101,13 +101,13 @@ nav ul li a:hover {
       justify-content: space-evenly;
       z-index: 1;
       width: 80%;
-      transform: translateX(100%);
+      /* transform: translateX(100%); */
       transition: all 1s;
       opacity: 0;
   }
   nav ul.slide {
     opacity: 1;
-    transform: translateX(0);
+    /* transform: translateX(0); */
   }
 }
 footer {
