--- a/css/style.css
+++ b/css/style.css
@@ -724,7 +724,7 @@ footer {
   }
   .study-cards-item {
     display: flex;
-    background: white;
+    background: aqua
     border-radius: 1rem;
     margin: 1rem 0rem;
     padding: 2rem;
