--- a/css/style.css
+++ b/css/style.css
@@ -736,7 +736,7 @@ footer {
 }
 .study-cards-item {
   display: flex;
-  background: red;
+  background: aqua;
   border-radius: 1rem;
   margin: 1rem 0rem;
   padding: 2rem;
