--- a/css/style.css
+++ b/css/style.css
@@ -1081,11 +1081,11 @@ span.post-date {
     justify-content: space-between;
     flex-direction: column;
   }
-  .prog-exp-title {
-    font-size: 30px;
+  .prog-exp-title h1 {
+    font-size: 60px;
     font-weight: bold;
     font-family: 'Poppins', sans-serif;
-    line-height: 75px;
+    line-height: 55px;
     padding-top: 25%;
   }
 }
